--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : " "
 title_separator          : "-"
 name                     : &name "Alexis Castel, Ph.D."
 description              : &description "personal description"
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Alexis Castel, Ph.D."
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : # "Earth"
+  employer         : # "ESI North America"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : # "alexis.castel@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
