--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ locale                   : "en-US"
 title                    : " "
 title_separator          : "-"
 name                     : &name "Alexis Castel, Ph.D."
-description              : &description "personal description"
+description              : &description "Technical Expert @ ESI North America"
 url                      : https://alexiscastel.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "alexiscastel/alexiscastel.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
