--- a/_config.yml
+++ b/_config.yml
@@ -235,7 +235,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: false
       share: false
       related: false
