--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
 #    url: /year-archive/
     
   - title: "CV"
-    url: 'https://www.linkedin.com/in/alexiscastel/'
+    url: /cv/
     
 #  - title: "Guide"
 #    url: /markdown/
