--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
 #  - title: "Teaching"
 #    url: /teaching/    
     
-  - title: "Fun applications"
+  - title: "Fun projects"
     url: /portfolio/
         
 #  - title: "Blog Posts"
