--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
 name                     : &name "Alexis Castel, Ph.D."
-description              : &description "Technical Expert @ ESI North America"
+description              : &description "Technical Expert @ Keysight Technologies"
 url                      : https://alexiscastel.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alexiscastel/alexiscastel.github.io"
