--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Alexis Castel, Ph.D."
   pronouns         : # example: "she/her"  
-  bio              : "Technical Expert @ ESI North America"
+  bio              : "Technical Expert @ Keysight Technologies"
   location         : # "Earth"
   employer         : # "ESI North America"
   uri              : # URL
